--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,10 +21,11 @@ NotBlank.position = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 postalcode = \u90F5\u4FBF\u756A\u53F7
 NotBlank.postalcode = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
-
+Pattern.postalcode = {0}\u306F7\u6841\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
+#supporterForm\u3068\u517C\u7528
 adress = \u4F4F\u6240
 NotBlank.adress = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
-
+#supporterForm\u3068\u517C\u7528
 email = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 Email.email = {0}\u306F\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 
@@ -36,6 +37,11 @@ AbstractUserDetailsAuthenticationProvider.credentialsExpired=\u30D1\u30B9\u30EF\
 AbstractUserDetailsAuthenticationProvider.badCredentials=\u30ED\u30B0\u30A4\u30F3ID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u9593\u9055\u3063\u3066\u3044\u307E\u3059\u3002
 
 
+supporterName = \u6A80\u4FE1\u5F92\u6C0F\u540D
+NotBlank.supporterName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
+ownerName = \u65BD\u4E3B\u540D
+NotBlank.ownerName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
-
+phoneNumber = \u96FB\u8A71\u756A\u53F7
+NotBlank.phoneNumber = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
