--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ NotBlank.templeId = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 password = \u30D1\u30B9\u30EF\u30FC\u30C9
 NotBlank.password = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
-Length.password = {0}\u306F\u3001{2}\u6841\u4EE5\u4E0A\u3001{1}\u6841\u4EE5\u4E0B\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u307E
+Length.password = {0}\u306F\u3001{2}\u6841\u4EE5\u4E0A\u3001{1}\u6841\u4EE5\u4E0B\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 Pattern.password = {0}\u306F\u534A\u89D2\u82F1\u6570\u5B57\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 
 
