--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,10 @@
+AbstractUserDetailsAuthenticationProvider.locked=\u30A2\u30AB\u30A6\u30F3\u30C8\u306F\u30ED\u30C3\u30AF\u3055\u308C\u3066\u3044\u307E\u3059\u3002
+AbstractUserDetailsAuthenticationProvider.disabled=\u30A2\u30AB\u30A6\u30F3\u30C8\u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
+AbstractUserDetailsAuthenticationProvider.expired=\u30A2\u30AB\u30A6\u30F3\u30C8\u306E\u6709\u52B9\u671F\u9650\u304C\u5207\u308C\u3066\u3044\u307E\u3059\u3002
+AbstractUserDetailsAuthenticationProvider.credentialsExpired=\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u6709\u52B9\u671F\u9650\u304C\u5207\u308C\u3066\u3044\u307E\u3059\u3002
+AbstractUserDetailsAuthenticationProvider.badCredentials=\u30ED\u30B0\u30A4\u30F3ID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u9593\u9055\u3063\u3066\u3044\u307E\u3059\u3002
+
+
 templeId = \u5BFA\u9662ID
 NotBlank.templeId = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
@@ -30,13 +37,6 @@ email = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 Email.email = {0}\u306F\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 
 
-AbstractUserDetailsAuthenticationProvider.locked=\u30A2\u30AB\u30A6\u30F3\u30C8\u306F\u30ED\u30C3\u30AF\u3055\u308C\u3066\u3044\u307E\u3059\u3002
-AbstractUserDetailsAuthenticationProvider.disabled=\u30A2\u30AB\u30A6\u30F3\u30C8\u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
-AbstractUserDetailsAuthenticationProvider.expired=\u30A2\u30AB\u30A6\u30F3\u30C8\u306E\u6709\u52B9\u671F\u9650\u304C\u5207\u308C\u3066\u3044\u307E\u3059\u3002
-AbstractUserDetailsAuthenticationProvider.credentialsExpired=\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u6709\u52B9\u671F\u9650\u304C\u5207\u308C\u3066\u3044\u307E\u3059\u3002
-AbstractUserDetailsAuthenticationProvider.badCredentials=\u30ED\u30B0\u30A4\u30F3ID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u9593\u9055\u3063\u3066\u3044\u307E\u3059\u3002
-
-
 supporterName = \u6A80\u4FE1\u5F92\u6C0F\u540D
 NotBlank.supporterName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
@@ -45,3 +45,9 @@ NotBlank.ownerName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 phoneNumber = \u96FB\u8A71\u756A\u53F7
 NotBlank.phoneNumber = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+
+worship = \u304A\u53C2\u308A
+schedule = \u65E5\u6642
+remark = \u5099\u8003
+worshipList = \u304A\u53C2\u308A\u4E00\u89A7
+
