プロパティファイルの定数化

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,4 +50,6 @@ worship = \u304A\u53C2\u308A
 schedule = \u65E5\u6642
 remark = \u5099\u8003
 worshipList = \u304A\u53C2\u308A\u4E00\u89A7
-
+supporterId = ID
+supporterList = \u6A80\u5F92\u4E00\u89A7
+templeId = \u5BFA\u9662ID
