お参り予定登録機能の実装

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,7 +36,7 @@ NotBlank.adress = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 email = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 Email.email = {0}\u306F\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 
-
+#supporterForm
 supporterName = \u6A80\u4FE1\u5F92\u6C0F\u540D
 NotBlank.supporterName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
@@ -46,6 +46,21 @@ NotBlank.ownerName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 phoneNumber = \u96FB\u8A71\u756A\u53F7
 NotBlank.phoneNumber = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
+#WorshipForm
+worshipType = \u304A\u53C2\u308A\u306E\u7A2E\u985E
+NotBlank.worshipType = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+
+schedule = \u304A\u53C2\u308A\u4E88\u5B9A
+NotNull.schedule = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+Future.schedule = {0}\u304C\u904E\u53BB\u306E\u65E5\u6642\u3067\u767B\u9332\u3055\u308C\u3066\u3044\u307E\u3059
+
+remark = \u5099\u8003
+NotBlank.remark = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+
+supporterId = \u6A80\u5F92ID
+NotBlank.remark = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+
+#constant
 worship = \u304A\u53C2\u308A
 schedule = \u65E5\u6642
 remark = \u5099\u8003
@@ -53,3 +68,4 @@ worshipList = \u304A\u53C2\u308A\u4E00\u89A7
 supporterId = ID
 supporterList = \u6A80\u5F92\u4E00\u89A7
 templeId = \u5BFA\u9662ID
+worshipRegister = \u304A\u53C2\u308A\u4E88\u5B9A\u767B\u9332
