お参りの予定登録機能の実装

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,10 +55,10 @@ NotNull.schedule = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 Future.schedule = {0}\u304C\u904E\u53BB\u306E\u65E5\u6642\u3067\u767B\u9332\u3055\u308C\u3066\u3044\u307E\u3059
 
 remark = \u5099\u8003
-NotBlank.remark = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+Length.remark = {0}\u306F{2}\u6587\u5B57\u4EE5\u4E0B\u3067\u8A18\u5165\u3057\u3066\u304F\u3060\u3055\u3044
 
 supporterId = \u6A80\u5F92ID
-NotBlank.remark = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+NotNull.supporterId = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 #constant
 worship = \u304A\u53C2\u308A
