レビュー箇所の修正

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,8 +20,8 @@ NotBlank.templeName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 denomination = \u5B97\u6D3E
 NotBlank.denomination = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
-name = \u6C0F\u540D
-NotBlank.name = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+monkName = \u6C0F\u540D
+NotBlank.monkName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 position = \u5F79\u8077
 NotBlank.position = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
@@ -30,8 +30,8 @@ postalcode = \u90F5\u4FBF\u756A\u53F7
 NotBlank.postalcode = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 Pattern.postalcode = {0}\u306F7\u6841\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 #supporterForm\u3068\u517C\u7528
-adress = \u4F4F\u6240
-NotBlank.adress = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+address = \u4F4F\u6240
+NotBlank.address = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 #supporterForm\u3068\u517C\u7528
 email = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 Email.email = {0}\u306F\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
