--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,7 +48,6 @@ NotBlank.phoneNumber = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 #WorshipForm
 worshipType = \u304A\u53C2\u308A\u306E\u7A2E\u985E
-NotBlank.worshipType = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 schedule = \u304A\u53C2\u308A\u4E88\u5B9A
 NotNull.schedule = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
@@ -60,6 +59,8 @@ Length.remark = {0}\u306F{2}\u6587\u5B57\u4EE5\u4E0B\u3067\u8A18\u5165\u3057\u30
 supporterId = \u6A80\u5F92ID
 NotNull.supporterId = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
+worshipOpts = \u304A\u53C2\u308A\u306E\u7A2E\u985E
+#NotBlank.worshipOpts = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 #constant
 worship = \u304A\u53C2\u308A
 schedule = \u65E5\u6642
