Ajax通信によるボタンの切り替え機能

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -70,3 +70,6 @@ supporterId = ID
 supporterList = \u6A80\u5F92\u4E00\u89A7
 templeId = \u5BFA\u9662ID
 worshipRegister = \u304A\u53C2\u308A\u4E88\u5B9A\u767B\u9332
+done = \u5B8C\u4E86\u30C1\u30A7\u30C3\u30AF
+complete = \u5B8C\u4E86
+incomplete = \u672A\u5B8C\u4E86
