--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ AbstractUserDetailsAuthenticationProvider.credentialsExpired=\u30D1\u30B9\u30EF\
 AbstractUserDetailsAuthenticationProvider.badCredentials=\u30ED\u30B0\u30A4\u30F3ID\u307E\u305F\u306F\u30D1\u30B9\u30EF\u30FC\u30C9\u304C\u9593\u9055\u3063\u3066\u3044\u307E\u3059\u3002
 
 
-templeId = \u5BFA\u9662ID
+templeId = \ID
 NotBlank.templeId = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 password = \u30D1\u30B9\u30EF\u30FC\u30C9
@@ -28,15 +28,15 @@ NotBlank.position = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 postalcode = \u90F5\u4FBF\u756A\u53F7
 NotBlank.postalcode = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
-Pattern.postalcode = {0}\u306F7\u6841\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
+Pattern.postalcode = {0}\u306F7\u6841\u306E\u534A\u89D2\u6570\u5B57\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
+
 #supporterForm\u3068\u517C\u7528
 address = \u4F4F\u6240
 NotBlank.address = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
-#supporterForm\u3068\u517C\u7528
+
 email = \u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9
 Email.email = {0}\u306F\u30E1\u30FC\u30EB\u30A2\u30C9\u30EC\u30B9\u5F62\u5F0F\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
 
-#supporterForm
 supporterName = \u6A80\u4FE1\u5F92\u6C0F\u540D
 NotBlank.supporterName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
@@ -45,6 +45,7 @@ NotBlank.ownerName = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
 
 phoneNumber = \u96FB\u8A71\u756A\u53F7
 NotBlank.phoneNumber = {0}\u306F\u5FC5\u9808\u5165\u529B\u3067\u3059
+Pattern.phoneNumber = {0}\u306F\u30CF\u30A4\u30D5\u30F3\u3092\u542B\u307E\u306A\u3044\u534A\u89D2\u6570\u5B57\u3067\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 #WorshipForm
 worshipType = \u304A\u53C2\u308A\u306E\u7A2E\u985E
